feat: implement secure user password handling
- add PasswordEncoder to UserService
- hash passwords before persistence
- validate duplicate email and registration number
- update UserMapper to avoid exposing or copying passwords
- adjust User entity password storage
- improve UserRequest password validation